plang/testing/logs/false-incorrect/135/program135.p.p
bd (gaEAM ka) (YqID) :- ((nO (A) YW5 OUZ (DRTI); (d p8 (q0VFq (qJa LGns (lT1 joc (n897 (upW Gx A (ywog7 (k qf) fq4 hnn (PR))) n65) (Q) (a Gs)) Fs (gzJ6 (sL (ZC4I) (u5)) (Ht7GP) (h (a) xFz (w (p)) Z) at)) (vZ46o vKdS HT W1) (fZ Csm hyHun (RU) (PgTQF)))); xK oaNq1 (qhwRc uhho) (R) (U); y31d vDD tF8i (p DP xR (OGi2H)))).

? (fy); xM W, vd9tQ KB2K f (h); f4; ((x (MT) Z (S93T) (m4E (BMn)))), p3 nUvU (IK) (Gmix) (KEJ).


